--- a/projects/principal/src/app/auth/auth.component.html
+++ b/projects/principal/src/app/auth/auth.component.html
@@ -1,6 +1,7 @@
 <div class="auth-body">
     <div class="auth-content">
       <div>
+          <h1 class="alert alert-danger">oi Bootstrap</h1>
       </div>
     </div>
   </div>
