--- a/projects/principal/src/app/auth/auth.component.html
+++ b/projects/principal/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="auth-body">
     <div class="auth-content">
       <div>
-          <h1 class="alert alert-danger">oi Bootstrap</h1>
+          <app-auth-email-password></app-auth-email-password>
       </div>
     </div>
   </div>
